fix articles collection page columns whitespace under article issue

--- a/assets/css/articles-collection.css
+++ b/assets/css/articles-collection.css
@@ -101,7 +101,9 @@
     padding: 0 48px;
   }
   .catalog_article {
-    margin-top: 52px;
+    padding-top: 52px;
+    margin-top: 0;
+    break-inside: avoid-column;
   }
   .article_heading {
     font-size: 24px;
@@ -133,13 +135,11 @@
     max-width: 70%;
   }
   .catalog_articles_list {
-    display: flex;
-    flex-wrap: wrap;
+    column-count: 2;
+    column-gap: 10%;
     gap: 10%;
   }
-  .catalog_article {
-    flex-basis: 45%;
-  }
+
   .article_lead_img {
     border-radius: 50px;
   }
